NXP-16065 : Core Extended Fields : Basic Constraint

--- a/nuxeo-core/nuxeo-core-schema/src/main/java/org/nuxeo/ecm/core/schema/types/constraints/package.html
+++ b/nuxeo-core/nuxeo-core-schema/src/main/java/org/nuxeo/ecm/core/schema/types/constraints/package.html
@@ -1,6 +1,3 @@
 <body>
-<p>
-  Some constraints implementations (not used yet, actually). Will be used to
-  implement constraints on schemas.
-</p>
+    <p>Implementation of schema xsd restrictions.</p>
 </body>
